--- a/Crime-Data-Analysis.ipynb
+++ b/Crime-Data-Analysis.ipynb
@@ -5,9 +5,9 @@
    "metadata": {},
    "source": [
     "# Chicago Crime Data Analysis\n",
-    "* Author: Kevin Chuang ([@k-chuang](https://github.com/k-chuang))\n",
-    "* Created on: March 18, 2018\n",
-    "* Description: Data exploration and data visualization on Chicago crime dataset from 2001 to present\n",
+    "* Author: Manita Pasi \n",
+    "* Created in: 2023\n",
+    "* Description: Data exploration and data visualization on US crime dataset from 2001 to 2018\n",
     "* Curated dataset: [Chicago Crime dataset](https://data.cityofchicago.org/Public-Safety/Crimes-2001-to-present/ijzp-q8t2)"
    ]
   },
